# ChatBot

./: .replit  README.md  app.py  main.py  pyproject.toml
static/: style.css
template/: chat.html  chatbot.html  message.html
