[tool.poetry]
name = "repl-nix-chatbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_chatbot"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
replit = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
